Cherry-pick eca7db09d7a43caf3ceb9398043d1bc74ade86e5. rdar://94379086

RemoteRenderingBackendProxy fails to maintain correct state when gpu process crashes and upon deletion
    https://bugs.webkit.org/show_bug.cgi?id=238618

    Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-04-04
    Reviewed by Simon Fraser.

    RemoteRenderingBackendProxy::m_needsWakeUpSemaphoreForDisplayListStream
    was not reset when proxy would connect to a new gpu process after a crash.
    RemoteRenderingBackendProxy::~RemoteRenderingBackendProxy() would not
    remove the GPUConnection::Client registration.

    * Platform/IPC/MessageReceiveQueueMap.cpp:
    (IPC::MessageReceiveQueueMap::remove):
    * Platform/IPC/StreamClientConnection.h:
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
    (WebKit::RemoteRenderingBackendProxy::~RemoteRenderingBackendProxy):
    (WebKit::RemoteRenderingBackendProxy::gpuProcessConnectionDidClose):
    (WebKit::RemoteRenderingBackendProxy::disconnectGPUProcess):
    (WebKit::RemoteRenderingBackendProxy::streamConnection):
    (WebKit::RemoteRenderingBackendProxy::didCreateWakeUpSemaphoreForDisplayListStream):
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

    Canonical link: https://commits.webkit.org/249187@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292289 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.676@safari-613-branch